--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,9 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.IP }} >> ~/.ssh/known_hosts
 
+      - name: Test SSH connection (debug)
+        run: ssh -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.IP }} 'echo SSH connection successful'
+        
       - name: Deploy to VPS using deploy.sh
         run: |
           ssh ${{ secrets.USER }}@${{ secrets.IP }} << 'EOF'
